# TerrariaClone

./: CMakeLists.txt  README.md  changelog.txt  conf.lua  main.lua
Old Versions/: 0.5_02.love  0.7 PR2.love  0.7 PR3.love
Releases/: 0.6_01.love  0.7 PR1.love
Source/: 0.7 TODO List.txt  Run - Linux.script  changelog.txt  main.lua  windows.bat
Source/class/: Animation.lua  Block.lua  Box.lua  Cursor.lua  GenMinable.lua  Player.lua
Source/func/: Character.lua  Maps.lua  Menu.lua  UsefulVars.lua
Source/gfx/: Thumbs.db
Source/libs/: 30log.lua
class/: Animation.lua  Box.lua  File.lua
class/Blocks/: BlockDirt.lua  BlockGlassPane.lua.back  BlockGrass.lua
func/: Cursor.lua  Maps.lua  Menu.lua
gfx/: Thumbs.db
src/: main.cxx
